Fix/Navbar and footer z-index position

--- a/src/components/Navbar.scss
+++ b/src/components/Navbar.scss
@@ -7,6 +7,8 @@ header {
     padding: 0 2rem;
     background-color: var(--mainColor);
     color: var(--textColor);
+    position: relative;
+    z-index: 10;
 }
 
 
