--- a/src/components/footer.scss
+++ b/src/components/footer.scss
@@ -1,7 +1,6 @@
 .footer {
     background-color: #111;
     position: relative;
-        z-index: -1;
 }
 .footerContainer {
     width: 80%;
@@ -48,6 +47,7 @@
     display: flex;
     margin: 0 auto;
     list-style: none;
+    
 }
 
 .footerNav ul li a {
